--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -205,6 +205,52 @@
             android:contentDescription="Arrow icon" />
     </LinearLayout>
 
+    <!-- LifeData button -->
+    <LinearLayout
+        android:id="@+id/btn_life_data"
+        android:layout_width="0dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:orientation="horizontal"
+        android:background="@drawable/profile_item_background"
+        android:gravity="center_vertical"
+        android:paddingStart="12dp"
+        android:paddingEnd="12dp"
+        android:clickable="true"
+        android:focusable="true"
+        app:layout_constraintTop_toBottomOf="@id/btn_privacy"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <ImageView
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            app:tint="#A095C1"
+            android:src="@drawable/ic_life_data"
+            android:contentDescription= "LiveData icon"
+            />
+
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="12dp"
+            android:layout_weight="1"
+            android:text="Life Data"
+            android:textColor="#56428F"
+            android:textSize="16sp"
+            android:textStyle="bold" />
+
+        <ImageView
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            app:tint="#A095C1"
+            android:src="@drawable/baseline_keyboard_arrow_right_24"
+            android:contentDescription="Arrow icon" />
+    </LinearLayout>
+
 
     <!-- Нижняя навигация -->
     <LinearLayout
